--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.6",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "typescript": "^5"
   }
