--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "lucide-react": "^0.445.0",
     "next": "14.2.6",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
